deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-molknu
  namespace: apps
  labels:
    app: go-molknu
spec:
  replicas: 5
  selector:
    matchLabels:
      app: go-molknu
  template:
    metadata:
      name: go-molknu
      labels:
        app: go-molknu
    spec:
      containers:
      - name: go-molknu
        image: registry.digitalocean.com/olsen/go-molknu
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
