ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  name: go-molknu
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "app.motoren.site"
    http:
      paths:
      - pathType: Prefix
        path: "/go-molknu"
        backend:
          service:
            name: go-molknu
            port:
              number: 80
